deploy: e0daecd87df4e62ae90bdcd323c38b4d6d2d290f

--- a/allclasses-index.html
+++ b/allclasses-index.html
@@ -44,7 +44,8 @@ loadScripts(document, 'script');</script>
 <!--   -->
 </a>
 <ul class="navList" title="Navigation">
-<li><a href="fr/spacefox/jrational/package-summary.html">Package</a></li>
+<li><a href="fr.spacefox.jrational/module-summary.html">Module</a></li>
+<li><a href="fr.spacefox.jrational/fr/spacefox/jrational/package-summary.html">Package</a></li>
 <li>Class</li>
 <li><a href="overview-tree.html">Tree</a></li>
 <li><a href="deprecated-list.html">Deprecated</a></li>
@@ -103,9 +104,15 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <th class="colLast" scope="col">Description</th>
 </tr>
 <tr id="i0" class="altColor">
-<td class="colFirst"><a href="fr/spacefox/jrational/Rational.html" title="class in fr.spacefox.jrational">Rational</a></td>
+<td class="colFirst"><a href="fr.spacefox.jrational/fr/spacefox/jrational/Rational.html" title="class in fr.spacefox.jrational">Rational</a></td>
 <th class="colLast" scope="row">
 <div class="block">Immutable rational numbers.</div>
+</th>
+</tr>
+<tr id="i1" class="rowColor">
+<td class="colFirst"><a href="fr.spacefox.jrational/fr/spacefox/jrational/RationalConstants.html" title="class in fr.spacefox.jrational">RationalConstants</a></td>
+<th class="colLast" scope="row">
+<div class="block">Some constants expressed as a <code>Rational</code> with enough precision to not be modified by <code>approximate()</code>.</div>
 </th>
 </tr>
 </table>
@@ -124,7 +131,8 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <!--   -->
 </a>
 <ul class="navList" title="Navigation">
-<li><a href="fr/spacefox/jrational/package-summary.html">Package</a></li>
+<li><a href="fr.spacefox.jrational/module-summary.html">Module</a></li>
+<li><a href="fr.spacefox.jrational/fr/spacefox/jrational/package-summary.html">Package</a></li>
 <li>Class</li>
 <li><a href="overview-tree.html">Tree</a></li>
 <li><a href="deprecated-list.html">Deprecated</a></li>
