--- a/allclasses.html
+++ b/allclasses.html
@@ -20,7 +20,8 @@
 <h1 class="bar">All&nbsp;Classes</h1>
 <main role="main" class="indexContainer">
 <ul>
-<li><a href="fr/spacefox/jrational/Rational.html" title="class in fr.spacefox.jrational">Rational</a></li>
+<li><a href="fr.spacefox.jrational/fr/spacefox/jrational/Rational.html" title="class in fr.spacefox.jrational">Rational</a></li>
+<li><a href="fr.spacefox.jrational/fr/spacefox/jrational/RationalConstants.html" title="class in fr.spacefox.jrational">RationalConstants</a></li>
 </ul>
 </main>
 </body>
