--- a/allpackages-index.html
+++ b/allpackages-index.html
@@ -44,7 +44,8 @@ loadScripts(document, 'script');</script>
 <!--   -->
 </a>
 <ul class="navList" title="Navigation">
-<li><a href="fr/spacefox/jrational/package-summary.html">Package</a></li>
+<li><a href="fr.spacefox.jrational/module-summary.html">Module</a></li>
+<li><a href="fr.spacefox.jrational/fr/spacefox/jrational/package-summary.html">Package</a></li>
 <li>Class</li>
 <li><a href="overview-tree.html">Tree</a></li>
 <li><a href="deprecated-list.html">Deprecated</a></li>
@@ -104,8 +105,10 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 </tr>
 <tbody>
 <tr class="altColor">
-<th class="colFirst" scope="row"><a href="fr/spacefox/jrational/package-summary.html">fr.spacefox.jrational</a></th>
-<td class="colLast">&nbsp;</td>
+<th class="colFirst" scope="row"><a href="fr.spacefox.jrational/fr/spacefox/jrational/package-summary.html">fr.spacefox.jrational</a></th>
+<td class="colLast">
+<div class="block">Immutable rational numbers.</div>
+</td>
 </tr>
 </tbody>
 </table>
@@ -124,7 +127,8 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <!--   -->
 </a>
 <ul class="navList" title="Navigation">
-<li><a href="fr/spacefox/jrational/package-summary.html">Package</a></li>
+<li><a href="fr.spacefox.jrational/module-summary.html">Module</a></li>
+<li><a href="fr.spacefox.jrational/fr/spacefox/jrational/package-summary.html">Package</a></li>
 <li>Class</li>
 <li><a href="overview-tree.html">Tree</a></li>
 <li><a href="deprecated-list.html">Deprecated</a></li>
