--- a/help-doc.html
+++ b/help-doc.html
@@ -44,7 +44,8 @@ loadScripts(document, 'script');</script>
 <!--   -->
 </a>
 <ul class="navList" title="Navigation">
-<li><a href="fr/spacefox/jrational/package-summary.html">Package</a></li>
+<li><a href="fr.spacefox.jrational/module-summary.html">Module</a></li>
+<li><a href="fr.spacefox.jrational/fr/spacefox/jrational/package-summary.html">Package</a></li>
 <li>Class</li>
 <li><a href="overview-tree.html">Tree</a></li>
 <li><a href="deprecated-list.html">Deprecated</a></li>
@@ -96,6 +97,17 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 </div>
 <div class="contentContainer">
 <ul class="blockList">
+<li class="blockList">
+<section role="region">
+<h2>Module</h2>
+<p>Each module has a page that contains a list of its packages, dependencies on other modules, and services, with a summary for each. These page may contain three categories:</p>
+<ul>
+<li>Packages</li>
+<li>Modules</li>
+<li>Services</li>
+</ul>
+</section>
+</li>
 <li class="blockList">
 <section role="region">
 <h2>Package</h2>
@@ -226,7 +238,8 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <!--   -->
 </a>
 <ul class="navList" title="Navigation">
-<li><a href="fr/spacefox/jrational/package-summary.html">Package</a></li>
+<li><a href="fr.spacefox.jrational/module-summary.html">Module</a></li>
+<li><a href="fr.spacefox.jrational/fr/spacefox/jrational/package-summary.html">Package</a></li>
 <li>Class</li>
 <li><a href="overview-tree.html">Tree</a></li>
 <li><a href="deprecated-list.html">Deprecated</a></li>
