--- a/overview-tree.html
+++ b/overview-tree.html
@@ -44,6 +44,7 @@ loadScripts(document, 'script');</script>
 <!--   -->
 </a>
 <ul class="navList" title="Navigation">
+<li>Module</li>
 <li>Package</li>
 <li>Class</li>
 <li class="navBarCell1Rev">Tree</li>
@@ -94,7 +95,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <h1 class="title">Hierarchy For All Packages</h1>
 <span class="packageHierarchyLabel">Package Hierarchies:</span>
 <ul class="horizontal">
-<li><a href="fr/spacefox/jrational/package-tree.html">fr.spacefox.jrational</a></li>
+<li><a href="fr.spacefox.jrational/fr/spacefox/jrational/package-tree.html">fr.spacefox.jrational</a></li>
 </ul>
 </div>
 <div class="contentContainer">
@@ -105,9 +106,10 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <ul>
 <li class="circle">java.lang.Number (implements java.io.Serializable)
 <ul>
-<li class="circle">fr.spacefox.jrational.<a href="fr/spacefox/jrational/Rational.html" title="class in fr.spacefox.jrational"><span class="typeNameLink">Rational</span></a> (implements java.lang.Comparable&lt;T&gt;)</li>
+<li class="circle">fr.spacefox.jrational.<a href="fr.spacefox.jrational/fr/spacefox/jrational/Rational.html" title="class in fr.spacefox.jrational"><span class="typeNameLink">Rational</span></a> (implements java.lang.Comparable&lt;T&gt;)</li>
 </ul>
 </li>
+<li class="circle">fr.spacefox.jrational.<a href="fr.spacefox.jrational/fr/spacefox/jrational/RationalConstants.html" title="class in fr.spacefox.jrational"><span class="typeNameLink">RationalConstants</span></a></li>
 </ul>
 </li>
 </ul>
@@ -125,6 +127,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <!--   -->
 </a>
 <ul class="navList" title="Navigation">
+<li>Module</li>
 <li>Package</li>
 <li>Class</li>
 <li class="navBarCell1Rev">Tree</li>
