--- a/serialized-form.html
+++ b/serialized-form.html
@@ -44,7 +44,8 @@ loadScripts(document, 'script');</script>
 <!--   -->
 </a>
 <ul class="navList" title="Navigation">
-<li><a href="fr/spacefox/jrational/package-summary.html">Package</a></li>
+<li><a href="fr.spacefox.jrational/module-summary.html">Module</a></li>
+<li><a href="fr.spacefox.jrational/fr/spacefox/jrational/package-summary.html">Package</a></li>
 <li>Class</li>
 <li><a href="overview-tree.html">Tree</a></li>
 <li><a href="deprecated-list.html">Deprecated</a></li>
@@ -102,7 +103,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <li class="blockList"><a id="fr.spacefox.jrational.Rational">
 <!--   -->
 </a>
-<h3>Class <a href="fr/spacefox/jrational/Rational.html" title="class in fr.spacefox.jrational">fr.spacefox.jrational.Rational</a> extends java.lang.Number implements Serializable</h3>
+<h3>Class <a href="fr.spacefox.jrational/fr/spacefox/jrational/Rational.html" title="class in fr.spacefox.jrational">fr.spacefox.jrational.Rational</a> extends java.lang.Number implements Serializable</h3>
 <ul class="blockList">
 <li class="blockList">
 <h3>Serialized Fields</h3>
@@ -144,7 +145,8 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <!--   -->
 </a>
 <ul class="navList" title="Navigation">
-<li><a href="fr/spacefox/jrational/package-summary.html">Package</a></li>
+<li><a href="fr.spacefox.jrational/module-summary.html">Module</a></li>
+<li><a href="fr.spacefox.jrational/fr/spacefox/jrational/package-summary.html">Package</a></li>
 <li>Class</li>
 <li><a href="overview-tree.html">Tree</a></li>
 <li><a href="deprecated-list.html">Deprecated</a></li>
