--- a/constant-values.html
+++ b/constant-values.html
@@ -44,7 +44,8 @@ loadScripts(document, 'script');</script>
 <!--   -->
 </a>
 <ul class="navList" title="Navigation">
-<li><a href="fr/spacefox/jrational/package-summary.html">Package</a></li>
+<li><a href="fr.spacefox.jrational/module-summary.html">Module</a></li>
+<li><a href="fr.spacefox.jrational/fr/spacefox/jrational/package-summary.html">Package</a></li>
 <li>Class</li>
 <li><a href="overview-tree.html">Tree</a></li>
 <li><a href="deprecated-list.html">Deprecated</a></li>
@@ -108,7 +109,8 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <!--   -->
 </a>
 <ul class="navList" title="Navigation">
-<li><a href="fr/spacefox/jrational/package-summary.html">Package</a></li>
+<li><a href="fr.spacefox.jrational/module-summary.html">Module</a></li>
+<li><a href="fr.spacefox.jrational/fr/spacefox/jrational/package-summary.html">Package</a></li>
 <li>Class</li>
 <li><a href="overview-tree.html">Tree</a></li>
 <li><a href="deprecated-list.html">Deprecated</a></li>
